# Epiphany

./: README.md  pyproject.toml
Src/: main.py
Src/Tools/: elastic.py  splunk.py  splunk_uploader.py
Src/Tools/Elastic/: elastic.py
Src/Tools/Server/: server_connector.py
Src/Tools/Splunk/: splunk.py
Src/Tools/TheHive/: thehive.py
