[project]
name = "epiphany"
version = "0.1.0"
description = ""
authors = [
    {name = "kaykRodr1gu3s",email = "110197812+kaykRodr1gu3s@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "elasticsearch (==8.11.1)",
    "pandas (>=2.2.3,<3.0.0)",
    "splunk-sdk (==2.0.2)",
    "thehive4py (==1.8.2)",
    "cffi (>=1.15.1,<2.0.0)",
    "wheel (>=0.45.1,<0.46.0)",
    "python-magic-bin (>=0.4.14,<0.5.0)",
    "paramiko (>=3.5.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
